# aws-solver-pyomo

./: .gitignore  Dockerfile  README.md  dsql.env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml  start-portfolio-demo.yml
.streamlit/: config.toml
infra/: app.py  cdk.context.json  cdk.json  dsql_demand_app.py  dsql_demand_stack.py  github_oidc.yaml  optimizer_build_stack.py  or_fleet_stack.py  requirements.txt
lambda/dsql_daily_demand/: handler.py  requirements.txt
scripts/: add_programming_route_distance.py  add_programming_volume.py  bootstrap_github_cicd.py  create_route_master_data.py  drop_legacy_dsql_tables.py  migrate_multi_vehicle_results.py  regenerate_noisy_demand.py  run_optimizer_codebuild.py  scale_beverage_demand.py  show_codebuild_log.py  smoke_test_optimizer.py  update_google_route_distances.py  update_vehicle_master_data.py  upload_sheets_to_dsql.py  verify_optimizer_deployment.py
src/or_aws_fleet/: __init__.py  analytics_agent.py  api.py  config.py  dashboard_data.py  demand.py  display_format.py  dsql_daily_demand.py  dsql_forecast.py  dsql_optimizer.py  forecasting.py  main.py  model.py  programming_model.py  route_visualization.py  storage.py  streamlit_app.py
tests/: test_analytics_agent.py  test_demand.py  test_display_format.py  test_dsql_demand_multiplier.py  test_forecasting.py  test_optimizer_api.py  test_programming_model.py  test_route_visualization.py  test_solver.py
