[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "or-aws-fleet"
version = "0.1.0"
description = "Daily AWS operational research fleet-sizing pipeline with Pyomo"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.42.79,<1.43",
  "crewai[bedrock]>=1.14.6,<1.15",
  "highspy==1.8.1",
  "numpy==2.2.1",
  "pandas==2.2.3",
  "scikit-learn>=1.6,<1.7",
  "joblib>=1.4,<2",
  "pyomo==6.8.2",
  "psycopg[binary]>=3.3.4",
  "python-dotenv>=1.0.0",
  "google-auth>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
